# viawind

./: .gitignore  README.md  VIA_Demo.ipynb  VIA_functions.ipynb  VIA_test.ipynb  environment.yml  mp_executor.py  mp_pool.py  mp_viawind.py  pyproject.toml  requirements.txt  setup.py  tx_aoi.csv  viawind.yml
.ipynb_checkpoints/: VIA_Demo-checkpoint.ipynb  VIA_functions-checkpoint.ipynb  VIA_test-checkpoint.ipynb
Graphics/: GIS_Workflow.pptx
VIA_Project/: VIA_Project.aprx  VIA_Project.atbx
VIA_Project/.backups/: VIA_Project.aprx
VIA_Project/GpMessages/: 724170303818200  724468523906100
VIA_Project/Index/VIA_Project/: _0.cfe  _0.cfs  _0.si  _4.cfe  _4.cfs  _4.si  _5.cfe  _5.cfs  _5.si  _6.cfe  _6.cfs  _6.si  segments_7
VIA_Project/VIA_Project.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.FDO_UUID.atx  a00000004.gdbtable  a00000004.spx  a00000006.CatRelsByDestinationID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a00000009.gdbtable  a0000000b.gdbtable  a0000000c.band_index.atx  a0000000c.col_index.atx  a0000000c.gdbtablx  a0000000c.row_index.atx  a0000000d.gdbtable  timestamps
datasets/: USGS_13_n29w098_20211103.tif.aux.xml  USGS_DEM_deflate.tif.aux.xml  tx_aoi.dbf  tx_aoi.shp  tx_aoi.shx
src/viawind/: wind.py
viawind/: __init__.py  wind.py
viawind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
viewsheds_blade_end/: viewshed_-97.4615658429601_28.280352244401524.tif.aux.xml  viewshed_-97.4615658429601_28.280352244401524.tif.ovr
